# filepi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.sh
filepi-server/: Cargo.toml
filepi-server/src/: config.rs  main.rs
filepi-server/src/handlers/: app_error.rs  files.rs  hash_utilities.rs  health.rs  mod.rs  result_handler.rs  syncfusion.rs  thumbnail_manager.rs
filepi-server/src/middleware/: logging.rs
filepi-server/src/models/: file_info.rs  mod.rs
frontend/FilePiWeb/: .editorconfig  .gitignore  App.razor  FilePiWeb.csproj  FilePiWeb.sln  Program.cs  _Imports.razor  libman.json
frontend/FilePiWeb/Extensions/: JSRuntimeExtension.cs
frontend/FilePiWeb/Interfaces/: IFilePiApi.cs  IFileService.cs
frontend/FilePiWeb/Layout/: EmptyLayout.razor  MainLayout.razor  NavMenu.razor
frontend/FilePiWeb/Models/: FileInfo.cs  FilePiResponse.cs  MoveRequest.cs
frontend/FilePiWeb/Pages/: FileBrowser.razor  SyncfusionFileBrowser.razor
frontend/FilePiWeb/Properties/: launchSettings.json
frontend/FilePiWeb/Services/: FileService.cs
frontend/FilePiWeb/wwwroot/: index.html
frontend/FilePiWeb/wwwroot/js/: common.js
syncfusion-fm-backend/: Cargo.toml
syncfusion-fm-backend/src/: lib.rs
syncfusion-fm-backend/src/models/: mod.rs  request.rs  response.rs  syncfusion_model.rs
