[package]
name = "filepi"
version = "0.1.0"
edition = "2024"

[dependencies]
syncfusion-fm-backend = { path = "../syncfusion-fm-backend" }
anyhow = "1.0.100"
axum = "0.8.7"
axum_typed_multipart = "0.16.4"
bytes = "1.11.0"
chrono = "0.4.42"
dotenvy = "0.15.7"
http-body-util = "0.1.3"
md5 = "0.8.0"
mime_guess = "2.0.5"
pwd = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"
